--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,6 +25,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .NavCart {
@@ -153,7 +154,7 @@ img {
 }
 
 .product-form {
-  width: 20%;
+  width: 100%;
 }
 
 #edit-button {
